<resources>
    <string name="app_name">GIVE&amp;RECEIVE</string>

    <string name="image_contentDescription">image</string>

    <string name="let_s_get_started_text">Let\'s Get started</string>

    <string name="intro_text_description">Exchange your specials, and make more friends</string>

    <string name="sign_in">SIGN IN</string>

    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Please input your name, email, and password</string>

    <string name="name">Name</string>

    <string name="password">Password</string>

    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your email and password, to login.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="no_posts_are_available">No Posts are available</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>


    <string name="create_Post_title">Create Post</string>
    <string name="create">CREATE</string>
    <string name="search">SEARCH</string>
    <string name="searchby_give">SEARCH GIVE TAG</string>
    <string name="searchby_receive">SEARCH RECEIVE TAG</string>
    <string name="Post_title">Post Title</string>
    <string name="Post_detail">Post Detail</string>

    <string name="Give_list">Give List</string>
    <string name="Receive_list">Receive List</string>

    <string name="Give_tag">Give Tag</string>
    <string name="Receive_tag">Receive Tag</string>
    <string name="back">BACK</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="give_helper_text">Specialties you want to teach others, Separate by comma</string>
    <string name="receive_helper_text">Specialties you want to learn from others, Separate by comma</string>
    <string name="map">MAP</string>
    <string name="Private">Private</string>
    <string name="default_content">Silence is a virtue</string>


</resources>