<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    android:orientation="vertical"
    tools:context=".activities.CreatePostActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/post_detail_content_padding"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/card_view_layout_content_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp">
                    <ImageView
                        android:id="@+id/iv_post_image"
                        android:layout_width="@dimen/post_image_size"
                        android:layout_height="@dimen/post_image_size"
                        android:contentDescription="@string/image_contentDescription"
                        android:src="@drawable/ic_post_place_holder" />

                </androidx.cardview.widget.CardView>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="@dimen/create_post_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_post_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Post_title"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/Post_detail"
                android:minHeight="@dimen/custom_min_height"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:counterEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_post_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/custom_min_height"
                    android:lineSpacingExtra="2dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/Give_list"
                app:helperText="@string/give_helper_text"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_give_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/Receive_list"
                app:helperText="@string/receive_helper_text"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_receive_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_get_location"
                    android:layout_width="@dimen/create_button_size"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/post_detail_content_padding"
                    android:text="@string/location"
                    android:backgroundTint="#5C5C5C"
                    android:textColor="@color/divider_color"
                    android:textSize="@dimen/btn_text_size_small" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create"
                    android:layout_width="@dimen/create_button_size"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/post_detail_content_padding"
                    android:text="@string/create"
                    app:backgroundTint="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size_small" />

            </LinearLayout>



        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_post_go_back"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/back"
            android:textColor="@color/black"
            app:backgroundTint="@color/secondary_text_color" />
    </com.google.android.material.card.MaterialCardView>


</ScrollView>